[package]
name = "gcp-bigquery-client"
version = "0.9.3"
authors = ["Laurent Querel <laurent.querel@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
An ergonomic async client library for GCP BigQuery.
"""
homepage = "https://github.com/lquerel/gcp-bigquery-client"
repository = "https://github.com/lquerel/gcp-bigquery-client"
documentation = "https://docs.rs/gcp-bigquery-client"
readme = "README.md"
exclude = ["/.github/*"]
keywords = ["gcp", "bigquery", "google-cloud"]
categories = ["database"]

[dependencies]
yup-oauth2 = "4.1"
hyper = "0.13"
hyper-rustls = "0.20"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
url = "2.2"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.2"
